# proofmark

./: .gitignore  CLAUDE.md  pyproject.toml  settings.yaml
Documentation/: BRD-v2.md  BRD.md  README.md  cli.md  configuration.md  out-of-scope.md  overview.md  scope-and-intent.md  test-architecture.md  testing.md
configs/: account_balance_snapshot_account_balance_snapshot.yaml  account_customer_join_account_customer_join.yaml  account_overdraft_history_account_overdraft_history.yaml  account_status_summary_account_status_summary.yaml  account_type_distribution_account_type_distribution.yaml  account_velocity_tracking_account_velocity_tracking.yaml  bond_maturity_schedule_bond_maturity_schedule.yaml  branch_card_activity_branch_card_activity.yaml  branch_directory_branch_directory.yaml  branch_transaction_volume_branch_transaction_volume.yaml  branch_visit_log_branch_visit_log.yaml  branch_visit_purpose_breakdown_branch_visit_purpose_breakdown.yaml  branch_visit_summary_branch_visit_summary.yaml  branch_visits_by_customer_branch_visits_by_customer.yaml  card_authorization_summary_card_authorization_summary.yaml  card_customer_spending_card_customer_spending.yaml  card_expiration_watch_card_expiration_watch.yaml  card_fraud_flags_card_fraud_flags.yaml  card_spending_by_merchant_card_spending_by_merchant.yaml  card_status_snapshot_card_status_snapshot.yaml  card_transaction_daily_card_transaction_daily.yaml  card_type_distribution_card_type_distribution.yaml  communication_channel_map_communication_channel_map.yaml  compliance_event_summary_compliance_event_summary.yaml  (+84 more)
(+212 files in other folders)
